# TeraSim-Service

./: .gitignore  README.md  pyproject.toml  simulation_config.yaml  terasim_control_plugin.py  terasim_request.rest  terasim_service.py
.github/workflows/: ci.yml
docs/: visualization_plugin_design.md  visualization_usage.md
examples/: main.py  main.sh  main_cosim.sh  simulation_Mcity_carla_config.yaml  simulation_Mcity_config.yaml  simulation_Mcitynew_carla_config.yaml  simulation_config.yaml  terasim_request.rest
examples/carla/: adjust_sumo_map_based_on_carla_map.py  carla_depth_camera.py  carla_rgb_camera.py  main.py  manual_control.py
examples/maps/Mcity_safetest/: mcity.route.xml
examples/maps/Mcity_safetest_carla/: gui-settings.xml  mcity.net.xml  mcity.route.xml
examples/maps/Mcitynew_safetest_carla/: mcity.add.xml  mcity.net.xml  mcity.route.xml  mcity.sumocfg
examples/maps/town10/: parking.add.xml  town10.net.xml  town10.sumocfg  town10_demand_with_ped.rou..xml
terasim_service/: __init__.py  __main__.py  api.py  constants.py  terasim_service.py  terasim_service_plugin.py
terasim_service/plugins/: __init__.py  base.py  cosim.py  dash_viz_app.py
terasim_service/utils/: __init__.py  base.py  service.py
terasim_service/utils/carla/: __init__.py  cosim.py  tools.py
terasim_service/utils/messages/: Agent.py  AgentCommand.py  AgentDict.py  AgentState.py  AgentStateSimplified.py  ConstructionZone.py  (+9 more)
tests/: terasim_request.rest  test_terasim_service.py
tests/fixtures/: simulation_config.yaml
tests/integration/: test_terasim_service.py
