[tool.poetry]
name = "terasim-service"
version = "0.1.0"
description = "TeraSim Service API for managing and controlling TeraSim simulations"
authors = ["Haowei Sun <printfplus@outlook.com>"]
readme = "README.md"
packages = [{include = "terasim_service"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pyyaml = "^6.0.2"
redis = "^5.2.1"
loguru = "^0.7.3"
carla = "0.9.15"
utm = "^0.8.0"
dash = "^2.14.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
bandit = "^1.7.7"
safety = "^2.3.5"
requests = "^2.32.4"

[tool.poetry.scripts]
terasim-service = "terasim_service.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=terasim_service --cov-report=term-missing"
